added some styling

--- a/lecture1/index.html
+++ b/lecture1/index.html
@@ -5,6 +5,15 @@
 	</head>
 	
 	<style type="text/css">
+			body {
+			background:#bad;
+			font-family: Helvetica, Arial, sans-serif;
+		}
+		h2 {
+			font-size:22px;
+			font-weight:300;
+			color:#def;
+		}
 	</style>
 	
 	<body>
@@ -22,7 +31,9 @@
 		<h3>An invisible seal</h3>
 
 		<h3>A video</h3>
-
+		<video width="300" height="240" controls="controls">
+		  <source src="gizmo.mp4" type="video/mp4" />
+		</video>
 		<h3>Two boxes side by side</h3>
 
 	</body>
