going full circle

--- a/week7/sandbox/map.html
+++ b/week7/sandbox/map.html
@@ -41,7 +41,7 @@
 		
 			
 		<!-- This is where the map gets inserted -->
-		<div id="mapcanvas2" style="height:315px;width:320px"></div>
+		<div id="mapcanvas" style="height:315px;width:320px"></div>
 		
 
 		<script type="text/javascript">
